view/frontend/web/css/buynow.css
.catalog-category-view .product-item-inner.buynow {
	position: relative;
    border: none;
    box-shadow: none;
    padding: 0 0 5px 1px;
}

.catalog-category-view button.buynow {
    width: 103px;
}

.catalog-product-view #product-addtocart-button {
	float: left;
}

.catalog-product-view #buy-now
{
	margin-bottom: 15px;
	width: 49%;
    line-height: 2.2rem;
    padding: 14px 17px;
    font-size: 1.8rem;
}

.button.buynow {
    width: 100%;
    margin-bottom: 10%;
}

.catalog-category-view .product.actions.product-item-actions {
    margin: 0px;
}

